<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="@drawable/background"
	    android:theme="@android:style/Theme.Black.NoTitleBar">

	   	<TextView
		    android:text="@string/app_name" 
		    android:textSize="30sp"
		    android:textColor="#FFFFFF" 
		    android:textStyle="bold"
		    android:padding="20dp"
		   	android:layout_height="wrap_content"
		    android:layout_width="fill_parent"
		    android:gravity="center_vertical|center_horizontal" />

	    <Button 
	       	android:id="@+id/menuViewAggregateMapButton"
	    	android:text="@string/aggregate_map_title"
        	android:textSize="20sp"
        	android:layout_width="250dp" 
        	android:layout_height="wrap_content"
        	android:layout_gravity="center"/>
        	
       	<Button
       	   	android:id="@+id/menuViewPersonalMapButton" 
       		android:text="@string/personal_map_title"
        	android:textSize="20sp"
        	android:layout_width="250dp" 
        	android:layout_height="wrap_content" 
        	android:layout_gravity="center"/>
       	
       	<Button
       	   	android:id="@+id/menuViewLogButton" 
       		android:text="@string/log_title"
        	android:textSize="20sp"
        	android:layout_width="250dp" 
        	android:layout_height="wrap_content" 
        	android:layout_gravity="center"/>  
       	
       	<Button
       	   	android:id="@+id/menuViewAboutButton" 
       		android:text="@string/about_title"
        	android:textSize="20sp"
        	android:layout_width="250dp" 
        	android:layout_height="wrap_content" 
        	android:layout_gravity="center"/>      	
        	   
	</LinearLayout>