<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:theme="@android:style/Theme.Black.NoTitleBar">  
    
   	<TextView
	    android:text="@string/about_title" 
	    android:textSize="30sp"
	    android:textColor="#FFFFFF" 
	    android:textStyle="bold"
	    android:padding="20dp"
	   	android:layout_height="wrap_content"
	    android:layout_width="fill_parent" />
    
	<TextView
		android:id="@+id/aboutViewTextView"
	    android:text="@string/about_content" 
	    android:textSize="10sp"
	    android:textColor="#FFFFFF" 
	    android:padding="5dp"
	    android:scrollbars = "vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:layout_weight="1" />
    	
    <TextView
		android:id="@+id/aboutViewTextView"
	    android:text="@string/about_senstastic" 
	    android:textSize="10sp"
	    android:textColor="#FFFFFF" 
	    android:padding="5dp"
	    android:scrollbars = "vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" />
        
   	<Button 
   		android:id="@+id/aboutViewBackButton"
   		android:text="@string/back_to_menu"
   		android:textSize="20sp"
   		android:layout_width="fill_parent" 
   		android:layout_height="wrap_content"
   		android:layout_gravity="center"/>

</LinearLayout>